# dungeon-vr

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
assets/: error.gltf  hand.blend  left_hand.glb  right_hand.glb
assets/LowPolyDungeon/: Dungeon_Custom_Border_Flat.glb  Dungeon_Custom_Border_Flat_col.gltf  Dungeon_Custom_Center.glb  Dungeon_Custom_Center_walk.gltf  Dungeon_Custom_Corner_Flat.glb  Dungeon_Custom_Corner_Flat_col.gltf  Dungeon_Wall_Var1.glb  Dungeon_Wall_Var1_col.gltf  FloorTile.glb  Key_Silver.glb  LowPolyDungeon.blend
cancel/: Cargo.toml
dungeon-vr/: Cargo.toml  build.rs
dungeon-vr-client/: Cargo.toml
dungeon-vr-client-connection/: Cargo.toml
dungeon-vr-client-connection/src/: lib.rs  testing.rs
dungeon-vr-client-connection/src/tests/: end_to_end.rs  packet.rs  request.rs  state.rs
dungeon-vr-client-session/: Cargo.toml
dungeon-vr-client/src/: lib.rs
dungeon-vr-connection-client/: Cargo.toml
dungeon-vr-connection-client/src/: lib.rs  testing.rs
dungeon-vr-connection-client/src/tests/: end_to_end.rs  packet.rs  request.rs  state.rs
dungeon-vr-connection-server/: Cargo.toml
dungeon-vr-connection-server/src/: lib.rs  testing.rs
dungeon-vr-connection-server/src/tests/: end_to_end.rs  packet.rs  request.rs  state.rs
dungeon-vr-connection-shared/: Cargo.toml
dungeon-vr-connection-shared/src/: connect_init_packet.rs  packet.rs
dungeon-vr-cryptography/: Cargo.toml
dungeon-vr-cryptography/src/: lib.rs
dungeon-vr-dedicated/: Cargo.toml
dungeon-vr-dedicated/src/: main.rs
dungeon-vr-protocol/: Cargo.toml
dungeon-vr-protocol/src/: challenge_token.rs  connect_challenge_packet.rs  sealed.rs
dungeon-vr-server/: Cargo.toml
dungeon-vr-server-connection/: Cargo.toml
dungeon-vr-server-connection/src/: lib.rs  testing.rs  tests.rs
dungeon-vr-server-connection/src/tests/: end_to_end.rs  packet.rs  request.rs  state.rs
dungeon-vr-server-session/: Cargo.toml
dungeon-vr-server-session/src/: lib.rs
dungeon-vr-server/src/: lib.rs  socket.rs  testing.rs  tests.rs
dungeon-vr-server/src/socket/: testing.rs
dungeon-vr-server/src/tests/: end_to_end.rs  event.rs  state.rs
dungeon-vr-session-client/: Cargo.toml
dungeon-vr-session-client/src/: lib.rs
dungeon-vr-session-server/: Cargo.toml
dungeon-vr-session-server/src/: lib.rs
dungeon-vr-session-shared/: Cargo.toml
dungeon-vr-session-shared/src/: action.rs  collider_cache.rs  components.rs  core.rs  fly_around.rs  interaction.rs  lib.rs  net_game.rs  packet.rs  physics.rs  render.rs  resources.rs  snapshot.rs  systems.rs  time.rs
dungeon-vr-session-shared/src/components/: interaction.rs  net.rs  physics.rs  render.rs  spatial.rs
dungeon-vr-session-shared/src/packet/: actions_packet.rs  commit_actions_packet.rs  game_state_packet.rs  ping_packet.rs  player_assignment_packet.rs  pong_packet.rs  update_owned_transforms_packet.rs  voice_packet.rs
dungeon-vr-shared/: Cargo.toml
dungeon-vr-shared/src/: cancel.rs  lib.rs  net_game.rs  protocol.rs
dungeon-vr-shared/src/protocol/: challenge_token.rs  connect_challenge_packet.rs  connect_init_packet.rs  packet.rs  sealed.rs
dungeon-vr-socket/: Cargo.toml
dungeon-vr-socket/src/: fakelag.rs  lib.rs  std_impls.rs  testing.rs
dungeon-vr-stream-codec/: Cargo.toml
dungeon-vr-stream-codec/src/: lib.rs  nalgebra_impls.rs  std_impls.rs
dungeon-vr-voip/: Cargo.toml
dungeon-vr-voip/src/: main.rs
dungeon-vr/assets/: error.blend  hand.blend  left_hand.gltf  right_hand.gltf
dungeon-vr/assets/LowPolyDungeon/: Dungeon_Custom_Border_Flat.gltf  Dungeon_Custom_Center.gltf  Dungeon_Custom_Center_col.gltf  Dungeon_Custom_Corner_Flat.gltf  Dungeon_Wall_Var1.gltf  Key_Silver.gltf  LowPolyDungeon.blend  Sword.gltf
dungeon-vr/shaders/: textured.frag  textured.vert  untextured.frag  untextured.vert
dungeon-vr/src/: asset.rs  audio.rs  components.rs  game.rs  interop.rs  local_game.rs  main.rs  material.rs  model.rs  render_data.rs  swapchain.rs  textured.rs  vk_handles.rs  xr_handles.rs  xr_session.rs
dungeon-vr/src/audio/: mixer.rs  steam_audio.rs
shaders/: flat_color.frag  flat_color.vert  textured.frag  textured.vert  untextured.frag  untextured.vert
src/: asset.rs  collider_cache.rs  flat_color.rs  game.rs  main.rs  mesh.rs  model.rs  render_data.rs  textured.rs  untextured.rs  vk_handles.rs  xr_session.rs
steam-audio-sys/: Cargo.toml  build.rs
steam-audio-sys/src/: lib.rs
