[package]
name = "dungeon-vr"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ash = { version = "0.37", default-features = false, features = ["loaded"] }
bevy_ecs = "0.7"
bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18"
cstr = "0.2"
ctrlc = "3"
enum-map = "2"
gltf = { version = "1", features = ["utils"] }
memoffset = "0.6"
openxr = { version = "0.16", features = ["static"] }
ordered-float = "3"
slotmap = "1"

[build-dependencies]
anyhow = "1"
