[workspace]
members = [
    "cancel",
    "dungeon-vr",
    "dungeon-vr-connection-client",
    "dungeon-vr-connection-server",
    "dungeon-vr-connection-shared",
    "dungeon-vr-cryptography",
    "dungeon-vr-dedicated",
    "dungeon-vr-session-client",
    "dungeon-vr-session-server",
    "dungeon-vr-session-shared",
    "dungeon-vr-socket",
    "dungeon-vr-stream-codec",
    "dungeon-vr-voip",
]
