[package]
name = "dungeon-vr-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dungeon-vr-cryptography = { path = "../dungeon-vr-cryptography" }
dungeon-vr-shared = { path = "../dungeon-vr-shared" }
dungeon-vr-stream-codec = { path = "../dungeon-vr-stream-codec" }
log = "0.4"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "test-util", "time"] }
