[package]
name = "dungeon-vr-cryptography"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.9", features = ["std"] }
dungeon-vr-stream-codec = { path = "../dungeon-vr-stream-codec" }
rand_core = { version = "0.5", features = ["getrandom"] }
thiserror = "1"
x25519-dalek = { version = "1", features = ["reusable_secrets"] }
