[package]
name = "dungeon-vr-dedicated"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
dungeon-vr-server-connection = { path = "../dungeon-vr-server-connection" }
dungeon-vr-server-session = { path = "../dungeon-vr-server-session" }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
