[package]
name = "dungeon-vr-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dungeon-vr-cryptography = { path = "../dungeon-vr-cryptography" }
dungeon-vr-shared = { path = "../dungeon-vr-shared" }
dungeon-vr-stream-codec = { path = "../dungeon-vr-stream-codec" }
futures = "0.3"
log = "0.4"
pin-project = "1"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "test-util", "time"] }
