[package]
name = "dungeon-vr-session-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cancel = { path = "../cancel" }
dungeon-vr-connection-client = { path = "../dungeon-vr-connection-client" }
dungeon-vr-session-shared = { path = "../dungeon-vr-session-shared" }
dungeon-vr-stream-codec = { path = "../dungeon-vr-stream-codec" }
futures = "0.3"
log = "0.4"
rapier3d = { version = "0.14", features = ["simd-stable"] }
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "test-util", "time"] }
