[package]
name = "dungeon-vr-session-shared"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.7"
byteorder = "1"
dungeon-vr-stream-codec = { path = "../dungeon-vr-stream-codec" }
gltf = { version = "1", features = ["utils"] }
log = "0.4"
rapier3d = { version = "0.14", features = ["simd-stable"] }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
