[package]
name = "dungeon-vr-socket"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cancel = { path = "../cancel" }
async-trait = "0.1"
futures = "0.3"
log = "0.4"
rand = "0.8"
rand_distr = "0.4"
tokio = { version = "1", features = ["net", "sync"] }
