[package]
name = "dungeon-vr-stream-codec"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
paste = "1"
rapier3d = { version = "0.14", features = ["simd-stable"] }
thiserror = "1"
x25519-dalek = "1"
